[project]
name = "nldate"
version = "0.1.0"
description = "Natural language date parser"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]

[tool.mypy]
python_version = "3.9"

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.12",
    "pytest>=8.0.0",
]
