[project]
name = "nldate"
version = "0.1.0"
description = "Natural language date parser"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.15.12",
    "pytest>=8.0.0",
]

[tool.ruff]
src = ["src"]

[tool.mypy]
python_version = "3.9"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
